--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ werkzeug = "~3.0.0"
 marshmallow = "~3.21.0"
 pynamodb = "~6.0.0"
 ksuid = "~1.3"
+coverage-badge = "^1.1.1"
 
 # Local dependencies. ----------------------------------------
 [tool.poetry.group.local.dependencies]
@@ -32,10 +33,6 @@ pytest = "~8.2.0"
 pytest-cov = "~5.0.0"
 moto = "~5.0.0"
 faker = "~25.2.0"
-
-# Development dependencies. ---------------------------------
-[tool.poetry.group.dev.dependencies]
-uWSGI = "~2.0.25.0"
 
 # Production dependencies. ----------------------------------
 [tool.poetry.group.prod.dependencies]
@@ -55,5 +52,3 @@ line_length = 119
 
 [tool.bandit]
 exclude_dirs = ["config", "data", "localstack", "migrations", "scripts", "tests"]
-#tests = ["B201", "B301"]
-#skips = ["B101", "B601"]
