--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,7 @@ services:
     platform: linux/amd64
     container_name: example-app
     volumes:
-      - ./src:/app/src
-      - ./app.py:/app/app.py
+      - ./app:/app
     ports:
       - "5000:5000"
     environment:
