--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,11 @@ python = "^3.12"
 boto3 = "~1.34.0"
 requests = "~2.31.0"
 flask = "~3.0.0"
-flask-injector = "~0.15.0"
 werkzeug = "~3.0.0"
-marshmallow = "~3.21.0"
 pynamodb = "~6.0.0"
 ksuid = "~1.3"
+pydantic = "~2.8.0"
+dependency-injector = "~4.42.0b1"
 
 # Local dependencies. ----------------------------------------
 [tool.poetry.group.local.dependencies]
