--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,34 +7,31 @@ authors = ["AnhLT59"]
 # base dependencies ------------------------------------
 [tool.poetry.dependencies]
 python = "^3.12"
-boto3 = "~1.34.0"
+boto3 = "~1.35.0"
 requests = "~2.31.0"
-flask = "~3.0.0"
-werkzeug = "~3.0.0"
+fastapi = "~0.115.0"
 pynamodb = "~6.0.0"
 ksuid = "~1.3"
-pydantic = "~2.8.0"
+pydantic = "~2.9.0"
 dependency-injector = "~4.42.0b1"
 
 # Local dependencies. ----------------------------------------
 [tool.poetry.group.local.dependencies]
-pytest = "~8.2.0"
-pytest-cov = "~5.0.0"
-moto = "~5.0.0"
-faker = "~25.2.0"
 pre-commit = "~3.6.0"
 coverage-badge = "^1.1.1"
 
 # Testing dependencies. -------------------------------------
 [tool.poetry.group.test.dependencies]
-pytest = "~8.2.0"
+pytest = "~8.3.0"
 pytest-cov = "~5.0.0"
 moto = "~5.0.0"
+mock = "~5.1.0"
+httpx = "~0.27.0"
 faker = "~25.2.0"
 
 # Production dependencies. ----------------------------------
 [tool.poetry.group.prod.dependencies]
-uWSGI = "~2.0.25.0"
+uvicorn = "~0.31.0"
 
 [build-system]
 requires = ["poetry-core"]
